adding-update-delete-list-courses-using-nodemon-ejs-mysql

--- a/views/admin/blog-delete.ejs
+++ b/views/admin/blog-delete.ejs
@@ -16,8 +16,12 @@
                 </p>
                 <form method="post">
                     <input type="hidden" name="blog_id" value="<%= blog.blog_id %>">
-                    <button class="btn btn-danger" type="submit">Evet</button>
-                    <a href="/admin/blogs" class="btn btn-primary">Vazgeç</a>
+                    <button class="btn btn-danger" type="submit">
+                        Evet
+                    </button>
+                    <a href="/admin/blogs" class="btn btn-primary">
+                        Vazgeç
+                    </a>
                 </form>
                </div>
             </div>
