--- a/views/admin/blog-edit.ejs
+++ b/views/admin/blog-edit.ejs
@@ -21,13 +21,17 @@
                     <input type="hidden" name="image" value="<%= blog.image %>">
 
                     <div class="row mb-3">
-                        <label for="title" class="col-sm-2 col-form-label">Başlık</label>
+                        <label for="title" class="col-sm-2 col-form-label">
+                            Başlık
+                        </label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="title" name="title" value="<%= blog.title %>">
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="subhead" class="col-sm-2 col-form-label">Altbaslik</label>
+                        <label for="subhead" class="col-sm-2 col-form-label">
+                            Altbaslik
+                        </label>
                         <div class="col-sm-8">
                             <textarea name="subhead" class="form-control" rows="5">
                                 <%= blog.subhead %>
@@ -35,17 +39,23 @@
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="description" class="col-sm-2 col-form-label">Açıklama</label>
+                        <label for="description" class="col-sm-2 col-form-label">
+                            Açıklama
+                        </label>
                         <div class="col-sm-8">
 
                             <!--Aciklama Alaninda Yazilan Yazilarda Yapilan Islemleri Alabilmek Icin
                                 id Attribute unda editor Ozelligini Kullaniyoruz-->
-                            <textarea id="editor" name="description" class="form-control" rows="10"><%= blog.description %> </textarea>
+                            <textarea id="editor" name="description" class="form-control" rows="10">
+                                <%= blog.description %>
+                            </textarea>
 
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="image" class="col-sm-2 col-form-label">Resim</label>
+                        <label for="image" class="col-sm-2 col-form-label">
+                            Resim
+                        </label>
                         <div class="col-sm-8">
 
                             <!--Daha Once Secilmis Bir Fotograf Var Ise
@@ -57,12 +67,18 @@
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="category" class="col-sm-2 col-form-label">Kategori</label>
+                        <label for="category" class="col-sm-2 col-form-label">
+                            Kategori
+                        </label>
                         <div class="col-sm-8">
                             <select name="category" id="category" class="form-select">
-                                <option value="-1" >Seçiniz</option>
+                                <option value="-1" >
+                                    Seçiniz
+                                </option>
                                 <% categories.forEach(category => { %>
-                                    <option value="<%= category.category_id %>"><%= category.category_name %> </option>
+                                    <option value="<%= category.category_id %>">
+                                        <%= category.category_name %>
+                                    </option>
                                 <% }) %>
                             </select>
                             <script>
@@ -92,7 +108,9 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-sm-8 offset-sm-2">
-                          <button type="submit" class="btn btn-primary">Kaydet</button>
+                          <button type="submit" class="btn btn-primary">
+                            Kaydet
+                        </button>
                         </div>
                     </div>
                 </form>
