--- a/views/admin/category-delete.ejs
+++ b/views/admin/category-delete.ejs
@@ -12,12 +12,16 @@
             <div class="col-md-12 mt-3 text-center">
                <div class="alert alert-secondary">
                 <p class="mb-3">
-                    <b><%= category.category_name %> </b> <br> isimli category kaydınız silmek istiyor musunuz?
+                    <b><%= category.category_name %> </b> <br> isimli kategori kaydınızı silmek istiyor musunuz?
                 </p>
                 <form method="post">
                     <input type="hidden" name="category_id" value="<%= category.category_id %>">
-                    <button class="btn btn-danger" type="submit">Evet</button>
-                    <a href="/admin/categories" class="btn btn-primary">Vazgeç</a>
+                    <button class="btn btn-danger" type="submit">
+                        Evet
+                    </button>
+                    <a href="/admin/categories" class="btn btn-primary">
+                        Vazgeç
+                    </a>
                 </form>
                </div>
             </div>
