--- a/views/partials/blog-card.ejs
+++ b/views/partials/blog-card.ejs
@@ -6,9 +6,13 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">
-                    <a style="text-decoration: none;" href="/blogs/<%= blog_id %> "> <%= title %> </a>
+                    <a style="text-decoration: none;" href="/blogs/<%= blog_id %> ">
+                        <%= title %>
+                    </a>
                 </h5>
-                <p class="card-text"><%= subhead %> </p>
+                <p class="card-text">
+                    <%= subhead %>
+                </p>
             </div>
         </div>
     </div>
