--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,21 +1,33 @@
 <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
     <div class="container">
-        <a href="/" class="navbar-brand">Blogapp</a>
+        <a href="/" class="navbar-brand">
+            Blogapp
+        </a>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-                <a href="/blogs" class="nav-link">Blog Listesi</a>
+                <a href="/blogs" class="nav-link">
+                    Blog Listesi
+                </a>
             </li>
             <li class="nav-item">
-                <a href="/admin/blogs" class="nav-link">Admin Blogs </a>
+                <a href="/admin/blogs" class="nav-link">
+                    Admin Blogs
+                </a>
             </li>
             <li class="nav-item">
-                <a href="/admin/categories" class="nav-link">Admin Categories </a>
+                <a href="/admin/categories" class="nav-link">
+                    Admin Kategoriler
+                </a>
             </li>
             <li class="nav-item">
-                <a href="/admin/blog/create" class="nav-link">Add Blog </a>
+                <a href="/admin/blog/create" class="nav-link">
+                    Kurs Ekle
+                </a>
             </li>
             <li class="nav-item">
-                <a href="/admin/category/create" class="nav-link">Add Category </a>
+                <a href="/admin/category/create" class="nav-link">
+                    Kategori Ekle
+                </a>
             </li>
         </ul>
     </div>
