--- a/views/admin/category-edit.ejs
+++ b/views/admin/category-edit.ejs
@@ -14,17 +14,22 @@
                 <form method="post">
                     <input type="hidden" name="category_id" value="<%= category.category_id %>">
                     <div class="row mb-3">
-                        <label for="title" class="col-sm-2 col-form-label">Name</label>
+                        <label for="title" class="col-sm-2 col-form-label">
+                            Kategori Adı
+                        </label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="category_name" name="category_name" value="<%= category.category_name %> ">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-sm-8 offset-sm-2">
-                          <button type="submit" class="btn btn-primary">Kaydet</button>
+                          <button type="submit" class="btn btn-primary">
+                            Kaydet
+                        </button>
                         </div>
                     </div>
                 </form>
+
             </div>
         </div>
     </div>
