--- a/views/partials/pagination.ejs
+++ b/views/partials/pagination.ejs
@@ -2,19 +2,29 @@
 <nav>
     <ul class="pagination justify-content-center">
         <li class="page-item">
-            <a href="" class="page-link">Geri</a>
+            <a href="" class="page-link">
+                Geri
+            </a>
         </li>
         <li class="page-item active">
-            <a href="" class="page-link">1</a>
+            <a href="" class="page-link">
+                1
+            </a>
         </li>
         <li class="page-item">
-            <a href="" class="page-link">2</a>
+            <a href="" class="page-link">
+                2
+            </a>
         </li>
         <li class="page-item">
-            <a href="" class="page-link">3</a>
+            <a href="" class="page-link">
+                3
+            </a>
         </li>
         <li class="page-item">
-            <a href="" class="page-link">İleri</a>
+            <a href="" class="page-link">
+                İleri
+            </a>
         </li>
     </ul>
 </nav>
