--- a/views/users/blog-details.ejs
+++ b/views/users/blog-details.ejs
@@ -15,8 +15,12 @@
                         <img src="/static/images/<%= blog.image %>" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-8">
-                        <h1 class="h3 mb-3"> <%= blog.title %> </h1>
-                        <p><%= blog.subhead %> </p>
+                        <h1 class="h3 mb-3">
+                            <%= blog.title %> 
+                        </h1>
+                        <p>
+                            <%= blog.subhead %> 
+                        </p>
                     </div>
                 </div>
                 <div class="row">
